# 3DFinalProject

./: .gitignore  CMakeLists.txt  README.md  Utils.cpp  Utils.h  main.cpp
inc/: menu_extra.h  slicing_plugin.h
pre_processing/: cube.stl  demo-turbo.py  points.txt  pre_proc.sh  stl2obj.py
src/: main.cpp
src/JaapSphere/: jaapSphere.cpp  jaapSphere.h
src/JapSphere/: jaapSphere.cpp  jaapSphere.h  japSphere.cpp  japSphere.h
src/find_core/: SimulatedAnnealingManager.cpp  SimulatedAnnealingManager.h
src/rotationAxis/: RotationAxis.cpp  RotationAxis.h  rotationAxis.cpp  rotationAxis.h
src/utils/: Utils.cpp  Utils.h
